# vlax

./: .gitignore  main.py  pyproject.toml
config/: settings.py  urls.py
post/: models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
